syntax = "proto3";

package proto;

// NetworkCapture service definition
service NetworkCapture {
    // Capture captures network
    rpc Capture (CaptureRequest) returns (stream CaptureResponse) {}
}

// CaptureRequest containing network capture request
message CaptureRequest {
    string pod = 1;
}

// CaputreResponse containing network details
message CaptureResponse {
    string srcIp = 1;
    string dstIp = 2;
    string srcPort = 3;
    string dstPort = 4;
}
